CMakeLists.txt of QScintilla2 shares information on includes and lib

--- a/manager/CMakeLists.txt
+++ b/manager/CMakeLists.txt
@@ -18,6 +18,10 @@ set( CMAKE_AUTOMOC ON )
 
 # Widgets finds its own dependencies (QtGui and QtCore).
 find_package( Qt5Widgets ${QT_VERSION_REQ} REQUIRED )
+if( APPLE )
+    find_package( Qt5MacExtras ${QT_VERSION_REQ} REQUIRED )
+endif()
+get_target_property( QT_QMAKE_EXECUTABLE Qt5::qmake LOCATION )
 
 SET( SRCS
     closewithoutsavingdialog.cpp
@@ -44,14 +48,23 @@ QT5_WRAP_UI( UIS_HDRS
 include_directories( ${Qt5Widgets_INCLUDE_DIRS} )
 
 # Needed -DQT_WIDGETS_LIB for Qt 5
-add_definitions( ${Qt5Widgets_DEFINITIONS} )
+add_definitions( ${Qt5Widgets_DEFINITIONS} ${Qt5MacExtras_DEFINITIONS} )
 
 # Executables fail to build with Qt 5 without -fPIE
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
 add_executable( QtZekyllManager ${SRCS} ${UIS_HDRS} )
 
-target_link_libraries( QtZekyllManager Qt5::Widgets )
+if( APPLE )
+    target_link_libraries( QtZekyllManager Qt5::Widgets Qt5::MacExtras
+                           $<TARGET_PROPERTY:QScintilla2,INTERFACE_LINK_LIBRARIES>
+)
+else()
+    target_link_libraries( QtZekyllManager Qt5::Widgets
+                           $<TARGET_PROPERTY:QScintilla2,INTERFACE_LINK_LIBRARIES>
+)
+endif()
 
 target_include_directories( QtZekyllManager PRIVATE
-    $<TARGET_PROPERTY:QScintilla2,INTERFACE_INCLUDE_DIRECTORIES> )
+                            $<TARGET_PROPERTY:QScintilla2,INTERFACE_INCLUDE_DIRECTORIES>
+)
