--- a/qodeedit/QodeEditConfig_CMake.h.in
+++ b/qodeedit/QodeEditConfig_CMake.h.in
@@ -16,6 +16,6 @@
 
 // Auto generated file do not edit
 
-#define PACKAGE_NAME "QodeEdit"
-#define PACKAGE_ABSOLUTE_DATA_DIR "$${ABSOLUTE_DATA_DIR}"
-#define PACKAGE_VERSION "$${VERSION}"
+#define PACKAGE_NAME "@QodeEdit_NAME@"
+#define PACKAGE_ABSOLUTE_DATA_DIR "@QodeEdit_ABSOLUTE_DATA_DIR@"
+#define PACKAGE_VERSION "@QodeEdit_VERSION@"
