--- a/libgit2/CMakeLists.txt
+++ b/libgit2/CMakeLists.txt
@@ -638,3 +638,6 @@ INSTALL(TARGETS git2
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libgit2.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig )
 INSTALL(DIRECTORY include/git2 DESTINATION ${INCLUDE_INSTALL_DIR} )
 INSTALL(FILES include/git2.h DESTINATION ${INCLUDE_INSTALL_DIR} )
+
+set_property( TARGET git2 PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+set_property( TARGET git2 PROPERTY INTERFACE_LINK_LIBRARIES "${CMAKE_CURRENT_BINARY_DIR}/libgit2.a" )
