Link multiple libraries so that libgit2 has required symbols

--- a/manager/CMakeLists.txt
+++ b/manager/CMakeLists.txt
@@ -11,6 +11,7 @@ if( NOT CMAKE_PREFIX_PATH )
 endif()
 
 set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules" )
+include(FindPkgConfig)
 
 # Find includes in corresponding build directories
 set( CMAKE_INCLUDE_CURRENT_DIR ON )
@@ -18,7 +19,10 @@ set( CMAKE_INCLUDE_CURRENT_DIR ON )
 # Run moc automatically when required
 set( CMAKE_AUTOMOC ON )
 
-# Widgets finds its own dependencies (QtGui and QtCore).
+#
+# Qt5Widgets
+#
+
 find_package( Qt5Widgets ${QT_VERSION_REQ} QUIET )
 if( NOT Qt5Widgets_FOUND )
     message( "=" )
@@ -29,7 +33,11 @@ endif()
 
 get_target_property( QT_QMAKE_EXECUTABLE Qt5::qmake LOCATION )
 
-if( ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" )
+#
+# CoreFoundation
+#
+
+if( "${CMAKE_SYSTEM_NAME}" MATCHES "Darwin" )
     find_package( CoreFoundation QUIET )
     if( NOT CoreFoundation_FOUND )
         message( "=" )
@@ -39,6 +47,97 @@ if( ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" )
         message( FATAL_ERROR "Some components have not been found" )
     endif()
 endif()
+
+#
+# Curl
+#
+
+pkg_check_modules( CURL libcurl )
+
+if( NOT CURL_FOUND )
+    message( "=" )
+    message( "= Note: Curl not found =" )
+    message( "=" )
+endif()
+
+#
+# HTTP_Parser
+#
+
+find_package( HTTP_Parser QUIET )
+if( NOT HTTP_PARSER_FOUND OR NOT HTTP_PARSER_VERSION_MAJOR EQUAL 2 )
+    message( "=" )
+    message( "= http-parser was not found or is too old; using bundled 3rd-party sources." )
+    message( "=" )
+endif()
+
+#
+# OpenSSL
+#
+
+if( NOT "${CMAKE_SYSTEM_NAME}" MATCHES "Darwin" )
+    find_package( OpenSSL QUIET )
+
+    if( NOT OPENSSL_FOUND )
+        message( "=" )
+        message( "= Warning: OpenSSL not found, QtZekyllManager might not build =" )
+        message( "=" )
+    endif()
+endif()
+
+#
+# Iconv
+#
+
+find_path( ICONV_INCLUDE_DIRS iconv.h )
+find_library( ICONV_LIBRARIES NAMES iconv libiconv libiconv-2 c )
+
+if( NOT ICONV_INCLUDE_DIRS OR NOT ICONV_LIBRARIES )
+    message( "=" )
+    message( "= Warning: Iconv not found, QtZekyllManager might not build =" )
+    message( "=" )
+endif()
+
+#
+# Security
+#
+
+if( "${CMAKE_SYSTEM_NAME}" MATCHES "Darwin" )
+    find_package( Security QUIET )
+    if( NOT SECURITY_FOUND )
+        message( "=" )
+        message( "= Warning: Security framework not found, QtZekyllManager might not build =" )
+        message( "= One possible path where the framework should be is: /System/Library/Frameworks/Security.framework/ =" )
+        message( "=" )
+    endif()
+endif()
+
+#
+# LibSSH
+#
+
+pkg_check_modules( LIBSSH2 libssh2 )
+if( NOT LIBSSH2_FOUND )
+    message( "=" )
+    message( "= LibSSH2 not found, QtZekyllManager will not build correctly =" )
+    message( "=" )
+endif()
+
+#
+# Zlib
+#
+
+find_package( ZLIB QUIET )
+if( NOT ZLIB_FOUND )
+    message( "=" )
+    message( "= zlib was not found; using bundled 3rd-party sources. =" )
+    message( "=" )
+endif()
+
+
+#
+# Follow source files, headers
+#
 
 SET( SRCS
     main.cpp
@@ -65,21 +164,24 @@ QT5_WRAP_UI( UIS_HDRS
     closewithoutsavingdialog.ui
 )
 
-# Also includes directories for dependencies QtCore and QtGui
-include_directories( ${Qt5Widgets_INCLUDE_DIRS} )
-
 # Needed -DQT_WIDGETS_LIB for Qt 5
 add_definitions( ${Qt5Widgets_DEFINITIONS} )
 
 # Executables fail to build with Qt 5 without -fPIE
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
+link_directories( ${CURL_LIBRARY_DIRS} ${LIBSSH2_LIBRARY_DIRS} )
+
 add_executable( QtZekyllManager ${SRCS} ${UIS_HDRS} )
 
 target_link_libraries( QtZekyllManager Qt5::Widgets ${CoreFoundation_LIBRARIES}
+                       ${ZLIB_LIBRARIES} ${CURL_LIBRARIES} ${HTTP_PARSER_LIBRARIES} ${OPENSSL_LIBRARIES}
+                       ${ICONV_LIBRARIES} ${SECURITY_LIBRARIES} ${LIBSSH2_LIBRARIES}
                        $<TARGET_PROPERTY:git2,INTERFACE_LINK_LIBRARIES>
 )
 
-target_include_directories( QtZekyllManager PRIVATE ${CoreFoundation_INCLUDE_DIRS}
+target_include_directories( QtZekyllManager PRIVATE ${Qt5Widgets_INCLUDE_DIRS} ${CoreFoundation_INCLUDE_DIRS}
+                            ${ZLIB_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${HTTP_PARSER_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR}
+                            ${ICONV_INCLUDE_DIR} ${SECURITY_INCLUDE_DIRS} ${LIBSSH2_INCLUDE_DIRS}
                             $<TARGET_PROPERTY:git2,INTERFACE_INCLUDE_DIRECTORIES>
 )
