--- a/libgit2/CMakeLists.txt
+++ b/libgit2/CMakeLists.txt
@@ -34,7 +34,7 @@ OPTION( PROFILE				"Generate profiling information"		OFF )
 OPTION( ENABLE_TRACE		"Enables tracing support"				OFF )
 OPTION( LIBGIT2_FILENAME	"Name of the produced binary"			OFF )
 
-OPTION( USE_ICONV			"Link with and use iconv library" 		OFF )
+OPTION( USE_ICONV			"Link with and use iconv library" 		ON )
 OPTION( USE_SSH				"Link with libssh to enable SSH support" ON )
 OPTION( USE_GSSAPI			"Link with libgssapi for SPNEGO auth"   OFF )
 OPTION( VALGRIND			"Configure build for valgrind"			OFF )
